feat(BaseServlet): getBody parse full params returns HashMap(String, List<String>)